--- a/MACHLEARN.html
+++ b/MACHLEARN.html
@@ -182,122 +182,27 @@
 		</div>
 	</div>
 	<!-- /container -->
- <footer id="footer">
-
-		<div class="container">
-   <div class="row">
-  <div class="footerbottom">
-    <div class="col-md-3 col-sm-6">
-      <div class="footerwidget">
-        <h4>
-          Course Categories
-        </h4>
-        <div class="menu-course">
-          <ul class="menu">
-            <li><a href="#">
-                List of Technology
-              </a>
-            </li>
-            <li><a href="#">
-                List of Business
-              </a>
-            </li>
-            <li><a href="#">
-                List of Photography
-              </a>
-            </li>
-            <li><a href="#">
-               List of Language
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-3 col-sm-6">
-      <div class="footerwidget">
-        <h4>
-          Products Categories
-        </h4>
-        <div class="menu-course">
-          <ul class="menu">
-            <li> <a href="#">
-                Individual Plans  </a>
-            </li>
-            <li><a href="#">
-                Business Plans
-              </a>
-            </li>
-            <li><a href="#">
-                Free Trial
-              </a>
-            </li>
-            <li><a href="#">
-                Academic
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-3 col-sm-6">
-      <div class="footerwidget">
-        <h4>
-          Browse by Categories
-        </h4>
-        <div class="menu-course">
-          <ul class="menu">
-            <li><a href="#">
-                All Courses
-              </a>
-            </li>
-            <li> <a href="#">
-                All Instructors
-              </a>
-            </li>
-            <li><a href="#">
-                All Members
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                All Groups
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-3 col-sm-6">
-            	<div class="footerwidget">
-                         <h4>Contact</h4>
-                         <div class="contact-info">
-                            <i class="fa fa-map-marker"></i> Delhi,India<br>
-                            <i class="fa fa-phone"></i> +91 7982495209 <br>
-                              </div>
-                                </div><!-- end widget -->
-    </div>
-  </div>
+	<div class="clear"></div>
+	<!--CLEAR FLOATS-->
 </div>
+<div class="footer2">
+	<div class="container">
+		<div class="row">
 
-
-			<div class="clear"></div>
-			<!--CLEAR FLOATS-->
+			<div class="col-md-6 panel">
+				<div class="panel-body">
+					<p class="simplenav">
+						<a href="index.html">Home</a> | 
+						<a href="about.html">About</a> | 
+						<a href="contact.html">Contact</a> |
+					</p>
+				</div>
+			</div>
 		</div>
-
-	</footer>
-	<foot class="white-section" id="foot">
-	  <div class="container-fluid">
-	    <i class="social-icon fab fa-facebook-f"></i>
-	    <i class="social-icon fab fa-twitter"></i>
-	    <i class="social-icon fab fa-instagram"></i>
-	    <i class="social-icon fas fa-envelope"></i><br>
-			<button type="button" class="btn1 btn btn-dark download-button"><i class="fab fa-apple "></i> Download</button>
-      <button type="button" class="btn2 btn btn-light download-button"><i class="fab fa-google-play "></i> Download</button>
-      <br>
-			<p>© Copyright 2021 myClass</p>
-	  </div>
-	</foot>
+		<!-- /row of panels -->
+	</div>
+</div>
+</footer>
 
 
 	<!-- JavaScript libs are placed at the end of the document so the pages load faster -->
