--- a/public_speaking.html
+++ b/public_speaking.html
@@ -49,17 +49,17 @@
 
 		<header id="head" class="secondary">
             <div class="container">
-                    <h1>Machine learning</h1>
-                    <p>Most enrolled and highly rated machine learning courses</p>
+                    <h1>Public Speaking</h1>
+                    <p>Most enrolled and highly rated Public Speaking courses</p>
                 </div>
     </header>
 
 
     <div class="container">
-<h3>Machine Learning</h3>
+<h3>Public Speaking</h3>
 <p>
-    “Machine learning will automate jobs that most people thought could only be done by people.”
-    ~Dave Waters.
+    “You can speak well if your tongue can deliverthe message of your heart.”
+    ~John Ford.
 </p>
 <br/>
 <ul class="list-unstyled video-list-thumbs row">
