--- a/Contact.html
+++ b/Contact.html
@@ -104,11 +104,7 @@
 			</div>
 	<!-- /container -->
 
-			<div class="social text-center">
-				<a href="#"><i class="fa fa-twitter"></i></a>
-				<a href="#"><i class="fa fa-facebook"></i></a>
-				<a href="#"><i class="fa fa-instagram"></i></a>
-			</div>
+		
 
 			<div class="clear"></div>
 			<!--CLEAR FLOATS-->
@@ -121,8 +117,8 @@
 						<div class="panel-body">
 							<p class="simplenav">
 								<a href="index.html">Home</a> | 
-								<a href="about.html">About</a> | |
-								<a href="contact.html">Contact</a>
+								<a href="about.html">About</a> | 
+								<a href="contact.html">Contact</a> |
 							</p>
 						</div>
 					</div>
