--- a/MUSIC.html
+++ b/MUSIC.html
@@ -44,7 +44,7 @@
 		<header id="head" class="secondary">
             <div class="container">
                     <h1>Music</h1>
-                    <p>Most enrolled and highly rated Music courses</p>
+                    <p>Most enrolled and highly rated courses in Music</p>
                 </div>
     </header>
 
@@ -52,8 +52,8 @@
     <div class="container">
 <h3>Music</h3>
 <p>
-    “Music will automate jobs that most people thought could only be done by people.” 
-    ~Dave Waters.
+    “Music is the language of the spirit. It opens the secret of life bringing peace, abolishing strife.” 
+    
 </p>
 <br/>
 <ul class="list-unstyled video-list-thumbs row">
@@ -181,109 +181,6 @@
 		</div>
 	</div>
 	<!-- /container -->
- <footer id="footer">
- 
-		<div class="container">
-   <div class="row">
-  <div class="footerbottom">
-    <div class="col-md-3 col-sm-6">
-      <div class="footerwidget">
-        <h4>
-          Course Categories
-        </h4>
-        <div class="menu-course">
-          <ul class="menu">
-            <li><a href="#">
-                List of Technology 
-              </a>
-            </li>
-            <li><a href="#">
-                List of Business
-              </a>
-            </li>
-            <li><a href="#">
-                List of Photography
-              </a>
-            </li>
-            <li><a href="#">
-               List of Language
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-3 col-sm-6">
-      <div class="footerwidget">
-        <h4>
-          Products Categories
-        </h4>
-        <div class="menu-course">
-          <ul class="menu">
-            <li> <a href="#">
-                Individual Plans  </a>
-            </li>
-            <li><a href="#">
-                Business Plans
-              </a>
-            </li>
-            <li><a href="#">
-                Free Trial
-              </a>
-            </li>
-            <li><a href="#">
-                Academic
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-3 col-sm-6">
-      <div class="footerwidget">
-        <h4>
-          Browse by Categories
-        </h4>
-        <div class="menu-course">
-          <ul class="menu">
-            <li><a href="#">
-                All Courses
-              </a>
-            </li>
-            <li> <a href="#">
-                All Instructors
-              </a>
-            </li>
-            <li><a href="#">
-                All Members
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                All Groups
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-3 col-sm-6"> 
-            	<div class="footerwidget"> 
-                         <h4>Contact</h4> 
-                         <div class="contact-info"> 
-                            <i class="fa fa-map-marker"></i> Delhi,India<br>
-                            <i class="fa fa-phone"></i> +91 7982495209 <br>
-                             <i class="fa fa-envelope-o"></i> myclass@gmail.com
-                              </div> 
-                                </div><!-- end widget --> 
-    </div>
-  </div>
-</div>
-			<div class="social text-center">
-				<a href="#"><i class="fa fa-twitter"></i></a>
-				<a href="#"><i class="fa fa-facebook"></i></a>
-				<a href="#"><i class="fa fa-github"></i></a>
-			</div>
 
 			<div class="clear"></div>
 			<!--CLEAR FLOATS-->
@@ -297,8 +194,7 @@
 							<p class="simplenav">
 								<a href="index.html">Home</a> | 
 								<a href="about.html">About</a> |
-								<a href="courses.html">Courses</a> |
-								<a href="contact.html">Contact</a>
+								<a href="contact.html">Contact</a> |
 							</p>
 						</div>
 					</div>
